--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Mue Syntax</title>
+    <title>Mute Syntax</title>
     <style>
       body {
         margin: 0;
