--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!--
-  Project: Mute Syntax
-  Author: Mohamed Louanjli (Moe)
-  License: MIT License
-  Description: Interactive generative poem for Kontradiktion #6 (kontradiktion.fi)
-  Language: JavaScript (p5.js)
-  Medium: Digital Poem / Browser-based
-  AI: No AI-generated text, but poetic logic designed using AI-assisted writing tool
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,10 +13,47 @@
         height: 100vh;
         background: #cccccc;
       }
+      .info-panel {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: min(460px, calc(100vw - 40px));
+        max-height: calc(100vh - 80px);
+        overflow: auto;
+        background: #f5f5f5;
+        border: 1px solid #000;
+        box-shadow: 0 6px 24px rgba(0,0,0,0.25);
+        padding: 16px 18px 14px 18px;
+        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+        font-size: 13px;
+        line-height: 1.35;
+        color: #000;
+        z-index: 9999;
+        -webkit-user-select: text;
+        user-select: text;
+      }
+      .info-panel h1 {
+        font-size: 14px;
+        margin: 0 0 8px 0;
+      }
+      .info-close {
+        position: absolute;
+        top: 6px;
+        right: 8px;
+        font-size: 16px;
+        cursor: pointer;
+        padding: 2px 6px;
+        border-radius: 4px;
+        border: 1px solid transparent;
+      }
+      .info-close:hover {
+        border-color: #000;
+        background: #e8e8e8;
+      }
     </style>
-    <script src="p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <script src="sketch.js"></script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
